<resources>
    <string name="virtual_key_edit">Edit Key</string>
    <string name="app_name" translatable="false">EKA2L1</string>
    <string name="error">Error</string>
    <string name="no_data">No data</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="packages">Packages</string>
    <string name="devices">Devices</string>
    <string name="switch_devices">Switch devices</string>
    <string name="profiles">Profiles</string>
    <string name="processing">Processing...</string>
    <string name="completed">Completed!</string>
    <string name="cancelled">Cancelled</string>
    <string name="remove">Remove</string>
    <string name="mount_sd">Mount MMC/SD card</string>
    <string name="no_devices_found">No devices found</string>
    <string name="exit">Exit</string>
    <string name="rename">Rename</string>
    <string name="delete_device_title">Delete device?</string>
    <string name="delete_device_message">This device\'s data will be deleted along with it. The app will restart to finish.</string>
    <string name="save_log">Save log</string>
    <string name="take_screenshot">Take screenshot</string>
    <string name="screenshot">Screenshot</string>
    <string name="take_screenshot_success">Screenshot saved to %s!</string>
    <string name="take_screenshot_fail">Failed to take screenshot!</string>
    <string name="opengl_required">The app requires OpenGL ES 3.0+.</string>
    <string name="warning">Warning</string>
    <string name="scoped_storage_warning">Your user data is stored in a location which <b>will be deleted</b> when you uninstall the app:\n</string>
    <string name="scoped_storage_move_hint">\n\nTo keep it somewhere reachable, long press \"Working directory\" in the settings and choose a folder.</string>
    <string name="install_ng_game">Install N-Gage game</string>
    <string name="notify_dialog_title">Notification</string>
    <string name="grid_app_list_mode">Grid mode</string>
    <string name="list_app_list_mode">List mode</string>
    <string name="mounted_mmc_ok_and_use_id_in_folder_name">Completed! Using MMC ID found in folder name.</string>
    <string name="ng1_menu_title">N-Gage</string>
    <string name="ng2_menu_title">N-Gage 2.0</string>
    <string name="install_preconfigured_pack">Install preconfigured pack</string>
    <string name="delete_existing_data_title">Delete existing data</string>
    <string name="delete_existing_data">Do you want to delete existing emulator data (devices, apps, games,...)?</string>
    <string name="fail_to_install_preconfigured_pack">Failed to install preconfigured pack!</string>
    <string name="fail_to_install_preconfigured_pack_and_rollback">Failed to install preconfigured pack! Rollback-ed to old data!</string>
    <string name="choose_installation_type">Choose installation type</string>
    <string name="choose_installation_type_instruction">Use an existing data pack to quickly settle in, or start afresh by installing a new device using its ROM/firmware.</string>
    <string name="preconfigured_pack">Preconfigured pack</string>
    <string name="rom_or_firmware">ROM/Firmware</string>
    <string name="save_launch_file_success">Launch file saved as %s!</string>
    <string name="install">Install</string>
    <string name="rescan_devices">Rescan devices</string>
    <string name="device_dump">Device dump</string>
    <string name="rpkg" translatable="false">RPKG</string>
    <string name="rom" translatable="false">ROM</string>
    <string name="path_to_rpkg">Path to RPKG</string>
    <string name="path_to_rom">Path to ROM</string>
    <string name="firmware">Firmware</string>
    <string name="path_to_firmware">Path to VPL</string>
    <string name="install_method">Install method</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="mode">Mode</string>
    <string name="no_device_dialog_title">No device installed!</string>
    <string name="no_device_installed">Please install a device. Files and ROM of a Symbian device are needed for the installation.\n\n<b>Note:</b> Each app will need suitable Symbian device to run.</string>
    <string name="install_device_note_may_need_rpkg">For S60v2 devices or higher, you may need to provide additional file called RPKG. The path chooser will pop up if the installer detects the need for it.</string>
    <string name="recommended_devices_to_install">Recommend devices to install</string>
    <string name="wiki_info">For more info about device install, please check out our wiki:</string>
    <string name="wiki_link" translatable="false">&#160;&lt;a href="https://eka2l1.miraheze.org/wiki/Official_Links">eka2l1.miraheze.org&lt;/a></string>
    <string name="install_rpkg_corrupt">The RPKG file provided is corrupt!</string>
    <string name="install_rpkg_file_not_found">RPKG file specified can\'t be opened!</string>
    <string name="install_raw_dump_fail_to_copy">Fail to copy raw dump files to target destination!</string>
    <string name="install_rom_fail_to_copy">Fail to copy ROM to target destination!</string>
    <string name="install_rpkg_insufficent_size">RPKG file is too small, the dump might be unfinished!</string>
    <string name="install_already_exist">Device to install already exists!</string>
    <string name="install_product_determine_fail">Fail to determine product information!</string>
    <string name="install_device_vpl_invalid_msg">The firmware description file (VPL) file is invalid!</string>
    <string name="install_device_rofs_corrupt_msg">ROFS file is corrupted!</string>
    <string name="install_device_rom_corrupt_msg">ROM file is corrupted!</string>
    <string name="isolate_drives">Separate storage for this device (drives C, D and E are not shared with other devices)</string>
    <string name="install_device_fpsx_corrupt_msg">FPSX file is corrupted!</string>
    <string name="pref_general_title">General</string>
    <string name="pref_system_title">System</string>
    <string name="pref_android_title" translatable="false">Android</string>
    <string name="pref_control_key_binding_sect_title">Key binding</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_enable_virtual_keyboard">Enable virtual keyboard</string>
    <string name="pref_enable_actionbar">Enable ActionBar</string>
    <string name="pref_enable_statusbar">Enable statusbar</string>
    <string name="pref_wakelock">Keep screen on</string>
    <string name="pref_enable_vibration">Enable vibration</string>
    <string name="pref_emulator_dir">Working directory</string>
    <string name="pref_launch_file_dir">Launch file directory</string>
    <string name="pref_emulator_dir_cant_change">The working directory can\'t be changed!</string>
    <string name="pref_emulator_dir_hint">Tap to browse, long press to move it elsewhere</string>
    <string name="pref_emulator_dir_needs_all_files_access">Moving the working directory outside of the app storage needs the \"All files access\" permission. Grant it in the system settings, then long press again.</string>
    <string name="pref_emulator_dir_not_writable">This folder can\'t be written to.</string>
    <string name="pref_emulator_dir_inside_current">Choose a folder outside of the current working directory.</string>
    <string name="pref_emulator_dir_move_confirm">Move the content of the working directory to:\n\n%1$s\n\nThe app will restart afterwards.</string>
    <string name="pref_emulator_dir_move_replaces">The chosen folder is not empty. Items with the same name will be replaced.</string>
    <string name="pref_emulator_dir_move_failed">Failed to move the content of the working directory.</string>
    <string name="pref_general_utilities_nearest_neighbor_filtering_msg">Enable nearest neighbor filtering</string>
    <string name="pref_system_language_option_name">Language</string>
    <string name="pref_system_real_time_accuracy_str">Real-time accuracy</string>
    <string name="pref_system_real_time_accuracy_level_name_low">Low</string>
    <string name="pref_system_real_time_accuracy_level_name_mid">Mid</string>
    <string name="pref_system_real_time_accuracy_level_name_high">High</string>
    <string name="pref_system_time_delay_option_name">Time delay</string>
    <string name="pref_system_setting_inheritance_option_name">Setting inheritance</string>
    <string name="pref_hal_imei_option_name" translatable="false">IMEI</string>
    <string name="pref_mmc_id" translatable="false">MMC ID</string>
    <string name="emulated_screen_rotation_item_name">Rotation</string>
    <string name="emulated_screen_refresh_rate_item_name">Refresh rate</string>
    <string name="pref_device_display_name">Phone name</string>
    <string name="hide_system_apps">Hide system applications</string>
    <string name="pref_bt_netplay" translatable="false">Bluetooth Netplay</string>
    <string name="pref_bt_netplay_direct_ips_manager">Direct IPs manager</string>
    <string name="enter_address">Enter address</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="pref_bt_netplay_mode_off">Off</string>
    <string name="pref_bt_netplay_mode_direct_ip">Direct IP</string>
    <string name="pref_bt_netplay_mode_lan">LAN</string>
    <string name="pref_bt_netplay_mode_server">Server</string>
    <string name="pref_bt_netplay_enable_upnp">Enable UPnP (for IPv4 public play)</string>
    <string name="pref_bt_netplay_server_address">Server address</string>
    <string name="pref_bt_netplay_password">Password</string>
    <string name="pref_bt_netplay_port_offset">Port offset</string>
    <string name="action_context_delete">Delete</string>
    <string name="action_context_rename">Rename</string>
    <string name="action_context_shortcut">Create shortcut</string>
    <string name="action_context_launch_file">Create launch file</string>
    <string name="start">Start</string>
    <string name="reset_settings">Reset settings</string>
    <string name="reset_layout">Reset keylayout</string>
    <string name="load_profile">Load profile</string>
    <string name="save_profile">Save profile</string>
    <string name="pref_screen_options">Screen options</string>
    <string name="pref_scale_ratio">Scale(%)</string>
    <string name="pref_background">Background</string>
    <string name="pref_background_image">Background image</string>
    <string name="pref_background_image_view">View</string>
    <string name="pref_background_image_empty">Not set</string>
    <string name="pref_background_image_clear">Clear</string>
    <string name="pref_background_image_fail_to_set">Fail to set background image!</string>
    <string name="background_image">Background image</string>
    <string name="background_image_opacity">BG image opacity</string>
    <string name="background_image_keep_aspect_ratio">Keep BG image aspect ratio</string>
    <string name="pref_virtual_keyboard_options">Virtual keyboard</string>
    <string name="set_as_default">Set as default</string>
    <string name="extensive_logging">Extensive logging</string>
    <string name="recommended_devices_note"><b>Note:</b> It\'s recommended to use firmware for installation of devices from S60v3 and above.</string>
    <string name="recommended_devices_s60v1" translatable="false"><b>S60v1:</b> N-Gage</string>
    <string name="recommended_devices_s60v2" translatable="false"><b>S60v2:</b> Nokia N70</string>
    <string name="recommended_devices_s60v3" translatable="false"><b>S60v3:</b> Nokia 5320 XpressMusic, Nokia E5</string>
    <string name="recommended_devices_s60v5" translatable="false"><b>S60v5:</b> Nokia 5800 XpressMusic, Nokia 5230</string>
    <string name="recommended_devices_s3_belle" translatable="false"><b>S^3, Belle:</b> Nokia C7-00, Nokia X7-00</string>
</resources>