<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.playsoftware.j2meloader.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_toggle_grid"
        android:checkable="true"
        android:icon="@drawable/ic_grid_white"
        android:title="@string/grid_app_list_mode"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_switch_devices"
        android:icon="@drawable/ic_mobile_white"
        android:title="@string/switch_devices"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_packages"
        android:title="@string/packages"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_devices"
        android:title="@string/devices"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_log"
        android:title="@string/save_log"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profiles"
        android:title="@string/profiles"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_install_preconfigured_pack"
        android:title="@string/install_preconfigured_pack" />
    <item
        android:id="@+id/action_ng1"
        android:title="@string/ng1_menu_title">
        <menu>
            <item
                android:id="@+id/action_install_ng_game"
                android:title="@string/install_ng_game"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_mount_sd"
                android:title="@string/mount_sd"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>
