<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="light"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_values"
        android:key="pref_theme"
        android:title="@string/pref_theme" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="pref_enable_virtual_keyboard"
        android:title="@string/pref_enable_virtual_keyboard" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="pref_enable_statusbar"
        android:title="@string/pref_enable_statusbar" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="pref_enable_wakelock"
        android:title="@string/pref_wakelock" />

</PreferenceScreen>