<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/sp_device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tv_additional_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/install_device_note_may_need_rpkg"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_install_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:text="@string/install_method" />

    <Spinner
        android:entries="@array/install_method_entries"
        android:id="@+id/sp_device_install_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/ll_firmware"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_firmware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/firmware" />

        <TextView
            android:id="@+id/tv_firmware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="19dp"
            android:text="@string/path_to_firmware" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_rom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rom" />

        <TextView
            android:id="@+id/tv_rom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="19dp"
            android:text="@string/path_to_rom" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rpkg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:id="@+id/bt_rpkg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rpkg" />

        <TextView
            android:id="@+id/tv_rpkg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="19dp"
            android:text="@string/path_to_rpkg" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_device_install"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/install" />
</LinearLayout>