<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="enable-nearest-neighbor-filter"
        android:title="@string/pref_general_utilities_nearest_neighbor_filtering_msg" />
    <SwitchPreferenceCompat
        android:id="@+id/switchPreferenceCompat"
        android:defaultValue="true"
        android:key="hide-system-apps"
        android:title="@string/hide_system_apps" />
    <SwitchPreferenceCompat
        android:id="@+id/switchPreferenceCompat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:key="extensive-logging"
        android:title="@string/extensive_logging" />
</PreferenceScreen>