<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cb_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/settings" />

    <CheckBox
        android:id="@+id/cb_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/pref_virtual_keyboard_options" />

    <CheckBox
        android:id="@+id/cb_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_as_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/buttonBarStyle">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/bt_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarNegativeButtonStyle"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/bt_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarPositiveButtonStyle"
            android:text="@android:string/ok" />
    </LinearLayout>
</LinearLayout>